<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety</name>
  <version>0.0.0</version>
  <description>Safety supervisor node: monitors obstacle alerts, validates planned paths, and halts the AGV on unsafe conditions.</description>
  <maintainer email="niklas.dietz@gmx.de">ndietz</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for building -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rises_interfaces</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>test_support</test_depend>
  <test_depend>geometry_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>